<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/vertikal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.festivaly.MainActivity" >

    <Button
        android:id="@+id/podujatia"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="14"
        android:text="@string/podujatia" />

    <Button
        android:id="@+id/skupiny"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="14"
        android:text="@string/skupiny" />

    <Button
        android:id="@+id/hladaj"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="14"
        android:text="@string/hladaj" />

    <Button
        android:id="@+id/aktualizuj"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="14"
        android:text="@string/aktualizuj" />

    <Button
        android:id="@+id/PridaniePodujatia"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="14"
        android:text="@string/pridaniePodujatia" />

    <Button
        android:id="@+id/PridaniePodujatiha"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="30"
        android:background="@android:color/transparent" />

</LinearLayout>