<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_shape"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/obrazokList"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_alignParentLeft="true"
        android:padding="5dip" >
    </ImageView>

    <TextView
        android:id="@+id/NazovDacohoVypis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/obrazokList"
        android:padding="10dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/NazovMiestaVypis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/NazovDacohoVypis"
        android:padding="10dip"
        android:paddingLeft="20dip" />

    <TextView
        android:id="@+id/spodny1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NazovDacohoVypis"
        android:layout_toRightOf="@+id/obrazokList"
        android:paddingLeft="10dip"
        android:text="@string/VypisPodujatiOd"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spodny2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NazovDacohoVypis"
        android:layout_toRightOf="@+id/spodny1"
        android:paddingLeft="2dip"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/spodny3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NazovDacohoVypis"
        android:layout_toRightOf="@+id/spodny2"
        android:paddingBottom="5dp"
        android:paddingLeft="7dip"
        android:text="@string/VypisPodujatiDo"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spodny4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NazovDacohoVypis"
        android:layout_toRightOf="@+id/spodny3"
        android:paddingBottom="5dp"
        android:paddingLeft="2dip"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/spodny5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NazovDacohoVypis"
        android:layout_toRightOf="@+id/spodny4"
        android:paddingBottom="5dp"
        android:paddingLeft="7dip"
        android:text="@string/VypisPodujatiVstupne"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spodny6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NazovDacohoVypis"
        android:layout_toRightOf="@+id/spodny5"
        android:paddingBottom="5dp"
        android:paddingLeft="2dip"
        android:textSize="12sp" />

</RelativeLayout>